# touch-rugby-analyzer

./: Makefile  README.md  app.py  index.html  pyproject.toml
.github/workflows/: example-workflow.yml
assets/: template.html
data/: france_england.csv  france_pays-bas.csv
notebooks/: Untitled.ipynb
touch_rugby_analyzer/: constants.py  credentials.json  gcloud_utils.py  generate_html.py  token.json  utils.py
