[tool.poetry]
name = "touch-rugby-analyzer"
version = "0.1.0"
description = ""
authors = ["robin <robin@safi.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.3.3"
dash = "^3.2.0"
plotly = "^6.3.0"
pandas = "^2.3.2"
jinja2 = "^3.1.6"
rich = "^14.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
